Fixed scrollbar so that it doesn't go off the page, scroller now working properly

--- a/app/assets/stylesheets/layout/_scrollmenu.scss
+++ b/app/assets/stylesheets/layout/_scrollmenu.scss
@@ -1,11 +1,13 @@
 .scrollmenu {
   position: fixed;
   z-index: 1;
-  width: 100%;
+  width: -moz-calc(100% - 250px);
+  width: -webkit-calc(100% - 250px);
+  width: calc(100% - 250px);
   height: 150px;
   margin-top: -190px;
   background-color: #FBFDFF;
-  overflow: auto;
+  overflow-x: auto;
   white-space: nowrap;
   display: flex;
   align-items: horizontal;
@@ -16,18 +18,18 @@
 .scrollmenu a {
   color: black;
   text-align: center;
-  padding: 6px 10px 3px 10px;
+  padding: 5px 10px 2px 10px;
   text-decoration: none;
 }
 .scrollmenu h3 {
   font-size: 16px;
   font-weight: bold;
-  margin: 8px 0 5px 0;
+  margin: 7px 0 4px 0;
 }
 .scrollmenu h4 {
   font-size: 14px;
   font-weight: bold;
-  margin: 7px 0 5px 0;
+  margin: 6px 0 4px 0;
 }
 .scrollmenu h6 {
   display: none;
